--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Balance app</title>
   <link rel="stylesheet" href="./build/styles.css" />
 
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="./manifest.pwa.json">
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
