--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Weather PWA">
-  <link rel="apple-touch-icon" href="images/icons/icon-152x152.png">
-  <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
+  <meta name="apple-mobile-web-app-title" content="Card Sharing">
+  <link rel="apple-touch-icon" href="./assets/images/creditcard-152x152.png">
+  <meta name="msapplication-TileImage" content="./assets/images/creditcard-144x144.png">
   <meta name="msapplication-TileColor" content="#d4be00">
 </head>
 <body>
